--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -2,4 +2,8 @@ server {
   listen 80 default;
   # server_name example.com
   root /vagrant/public;
+  try_files $uri/index.html $uri @unicorn;
+  location @unicorn {
+    proxy_pass http://localhost:3000;
+  }
 }
