--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -2,6 +2,7 @@ server {
   listen 80 default;
   # server_name example.com
   root /vagrant/public;
+  error_page 500 502 503 504 /500.html;
   try_files $uri/index.html $uri @unicorn;
   location @unicorn {
     proxy_pass http://localhost:3000;
