--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,5 @@
 deployment:
   acceptance:
     branch: master
-    heroku:
-      appname: json-rails-acceptance
+    commands:
+      - ./deploy_to_acceptance.sh
